--- a/readme
+++ b/readme
@@ -1,3 +1,7 @@
+Resilient ASP.NET Core Service with Nginx Gateway
+Projektoversigt
+Dette projekt demonstrerer en resilient opsætning for en ASP.NET Core-service containeriseret med Docker og beskyttet af en Nginx API-gateway. Projektet indeholder to instanser af ASP.NET Core-servicen med forskellige konfigurationer, som håndteres via Nginx til load balancing og circuit breaking.
+
 docker compose up -d
 docker compose down
 curl http://localhost:4000/CBService/GetService
